--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,18 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<repositories>
+		<repository>
+			<id>scala-tools.org</id>
+			<url>http://scala-tools.org/repo-releases</url>
+		</repository>
+	</repositories>
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.scala-tools</groupId>
 				<artifactId>maven-scala-plugin</artifactId>
+				<version>2.9.1</version>
 				<executions>
 					<execution>
 						<goals>
