Updated to maven-invoker plugin for 2.1.x maven compatability

--- a/src/it/test-mojo-project/src/it/testEcho/pom.xml
+++ b/src/it/test-mojo-project/src/it/testEcho/pom.xml
@@ -11,7 +11,7 @@
 			<plugin>
 				<groupId>org.scala-tools</groupId>
 				<artifactId>test-scala-plugin</artifactId>
-				<version>testing</version>
+				<version>@project.version@</version>
 			</plugin>
 		</plugins>
 	</build>
