--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 		<version>1.4</version>
 	</parent>
 	<properties>
-		<scala.version>2.7.2</scala.version>
+		<scala.version>2.7.5</scala.version>
 	</properties>
 	<artifactId>scala-mojo-support</artifactId>
 	<packaging>jar</packaging>
@@ -60,7 +60,7 @@
 			<plugin>
 				<groupId>org.scala-tools</groupId>
 				<artifactId>maven-scala-plugin</artifactId>
-				<version>2.9.1</version>
+				<version>2.11</version>
 				<executions>
 					<execution>
 						<goals>
@@ -71,19 +71,32 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>shitty-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>clean</goal>
-							<goal>install</goal>
-							<goal>test</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+      <plugin>
+                <artifactId>maven-invoker-plugin</artifactId>
+                <version>1.3</version>
+                <configuration>
+                    <debug>false</debug>
+                    <streamLogs>true</streamLogs>
+                    <projectsDirectory>src/it</projectsDirectory>
+                    <pomIncludes>
+                        <pomInclude>**/pom.xml</pomInclude>
+                    </pomIncludes>
+                    <pomExcludes>
+                        <pomExclude>test-mojo-project/src/it/**/pom.xml</pomExclude>
+                    </pomExcludes>
+                    <preBuildHookScript>setup.groovy</preBuildHookScript>
+                    <postBuildHookScript>validate.groovy</postBuildHookScript>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>integration-test</id>
+                        <goals>
+                            <goal>install</goal>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 	</build>
 </project>
