--- a/src/it/test-mojo-project/pom.xml
+++ b/src/it/test-mojo-project/pom.xml
@@ -15,7 +15,7 @@
 		<dependency>
 			<groupId>org.scala-tools</groupId>
 			<artifactId>scala-mojo-support</artifactId>
-			<version>testing</version>
+			<version>@project.version@</version>
 		</dependency>
 
 		<dependency>
@@ -45,23 +45,33 @@
 					<dependency>
 						<groupId>org.scala-tools</groupId>
 						<artifactId>scala-mojo-support</artifactId>
-						<version>testing</version>
+						<version>@project.version@</version>
 					</dependency>
 				</dependencies>
 			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>shitty-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>clean</goal>
-							<goal>install</goal>
-							<goal>test</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+		  <plugin>
+                <artifactId>maven-invoker-plugin</artifactId>
+                <version>1.3</version>
+                <configuration>
+                    <debug>false</debug>
+                    <streamLogs>true</streamLogs>
+                    <projectsDirectory>src/it</projectsDirectory>
+                    <pomIncludes>
+                        <pomInclude>**/pom.xml</pomInclude>
+                    </pomIncludes>
+                    <preBuildHookScript>setup.groovy</preBuildHookScript>
+                    <postBuildHookScript>validate.groovy</postBuildHookScript>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>integration-test</id>
+                        <goals>
+                            <goal>install</goal>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 	</build>
 
