--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-container-default</artifactId>
-      <version>1.0-alpha-9</version>
+      <version>1.5.4</version>
     </dependency>
     <dependency>
         <groupId>jline</groupId>
@@ -73,6 +73,13 @@
     </license>
   </licenses>
   <build>
+    <extensions>
+      <extension>
+        <groupId>org.apache.maven.wagon</groupId>
+        <artifactId>wagon-webdav-jackrabbit</artifactId>
+        <version>1.0-beta-6</version>
+      </extension>
+    </extensions>  
     <plugins>
       <plugin>
         <groupId>org.scala-tools</groupId>
@@ -125,6 +132,20 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>2.0.1</version>
+      </plugin>
     </plugins>
   </build>
+  <distributionManagement>
+      <snapshotRepository>
+          <id>nexus.scala-tools.org</id>
+          <url>http://nexus.scala-tools.org/content/repositories/snapshots</url>
+      </snapshotRepository>
+      <site>
+          <id>nexus.scala-tools.org</id>
+          <url>dav:http://nexus.scala-tools.org/content/sites/mvnsites-snapshots/scala-mojo-support</url>
+      </site>
+  </distributionManagement>
 </project>
