--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <version>1.4</version>
   </parent>
   <properties>
+    <maven.version>3.0</maven.version>
     <scala.version>2.8.0</scala.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -19,23 +20,34 @@
   <dependencies>
     <dependency>
       <groupId>org.apache.maven</groupId>
+      <artifactId>maven-core</artifactId>
+      <version>${maven.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
-      <version>2.2.1</version>
+      <version>${maven.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
+      <artifactId>maven-plugin-api</artifactId>
+      <version>${maven.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven.plugin-tools</groupId>
       <artifactId>maven-plugin-tools-api</artifactId>
-      <version>2.1</version>
+      <version>2.5.1</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.maven</groupId>
+          <artifactId>maven-project</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-project</artifactId>
-      <version>2.2.1</version>
-    </dependency>
-    <dependency>
-      <groupId>org.codehaus.plexus</groupId>
-      <artifactId>plexus-container-default</artifactId>
-      <version>1.5.4</version>
+      <groupId>org.sonatype.spice</groupId>
+      <artifactId>spice-inject-plexus</artifactId>
+      <version>1.3.4.1</version>
     </dependency>
     <dependency>
         <groupId>jline</groupId>
@@ -108,10 +120,10 @@
       </plugin>
       <plugin>
         <artifactId>maven-invoker-plugin</artifactId>
-        <version>1.3</version>
+        <version>1.5</version>
         <configuration>
-          <debug>false</debug>
-          <streamLogs>true</streamLogs>
+          <debug>true</debug>
+          <streamLogs>false</streamLogs>
           <projectsDirectory>src/it</projectsDirectory>
           <pomIncludes>
             <pomInclude>**/pom.xml</pomInclude>
