--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,7 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-invoker-plugin</artifactId>
         <version>1.5</version>
         <configuration>
