Add config to the scala mojo execution
Signed-off-by: Oscar Forero <omforero@googlemail.com>

--- a/src/it/echo-mojo-test/pom.xml
+++ b/src/it/echo-mojo-test/pom.xml
@@ -37,6 +37,9 @@
 	            		<goals>
 	              			<goal>echo</goal>
 	            		</goals>
+	            		<configuration>
+	              			<message>This is a message from the scala mojo</message>
+	            		</configuration>
 	          		</execution>
 				</executions>
 			</plugin>
