--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,10 @@
           <id>nexus.scala-tools.org</id>
           <url>http://nexus.scala-tools.org/content/repositories/snapshots</url>
       </snapshotRepository>
+      <repository>
+          <id>nexus.scala-tools.org</id>
+          <url>http://nexus.scala-tools.org/content/repositories/snapshots</url>
+      </repository>
       <site>
           <id>nexus.scala-tools.org</id>
           <url>dav:http://nexus.scala-tools.org/content/sites/mvnsites-snapshots/scala-mojo-support</url>
