--- a/pom.xml
+++ b/pom.xml
@@ -1,22 +1,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.scala-tools</groupId>
-    <artifactId>scala-tools-parent</artifactId>
-    <version>1.4</version>
-  </parent>
   <properties>
     <maven.version>3.0</maven.version>
     <scala.version>2.8.0</scala.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  <groupId>com.jsuereth</groupId>
   <artifactId>scala-mojo-support</artifactId>
   <packaging>jar</packaging>
   <version>0.3-SNAPSHOT</version>
   <name>Scala Mojo Support</name>
   <description>The scala-mojo-support project contains helper code for creating Mojos in scala.</description>
-
+  <url>http://jsuereth.com/scala-mojo-support</url>
+  <scm>
+    <url>http://github.com/jsuereth/scala-mojo-support</url>
+    <connection>scm:git://github.com/jsuereth/scala-mojo-support.git</connection>
+    <developerConnection>scm:git://github.com/jsuereth/scala-mojo-support.git</developerConnection>
+  </scm>
   <dependencies>
     <dependency>
       <groupId>org.apache.maven</groupId>
@@ -71,19 +72,18 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
-  <repositories>
-    <repository>
-      <id>scala-tools.org</id>
-      <url>http://scala-tools.org/repo-releases</url>
-    </repository>
-  </repositories>
   <licenses>
     <license>
       <name>BSD</name>
       <url>http://www.opensource.org/licenses/bsd-license.html</url>
     </license>
   </licenses>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>oss-sonatype-snapshots</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+    </pluginRepository>
+  </pluginRepositories>
   <build>
     <extensions>
       <extension>
@@ -147,6 +147,24 @@
       <plugin>
         <artifactId>maven-site-plugin</artifactId>
         <version>2.0.1</version>
+      </plugin>
+      <plugin>
+        <groupId>com.github.github</groupId>
+        <artifactId>site-maven-plugin</artifactId>
+        <version>0.5</version>
+        <configuration>
+          <message>Creating site for ${project.version}</message>
+          <noJekyll>true</noJekyll>
+          <userName>jsuereth</userName>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>site</goal>
+            </goals>
+            <phase>site</phase>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
