--- a/pom.xml
+++ b/pom.xml
@@ -114,13 +114,20 @@
       <plugin>
         <groupId>org.scala-tools</groupId>
         <artifactId>maven-scala-plugin</artifactId>
-        <version>2.14</version>
+        <version>2.15.3-SNAPSHOT</version>
         <executions>
           <execution>
+            <id>compile</id>
             <goals>
               <goal>add-source</goal>
               <goal>compile</goal>
               <goal>testCompile</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>attach-javadocs</id>
+            <goals>
+              <goal>doc-jar</goal>
             </goals>
           </execution>
         </executions>
