--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <!-- <parent>
-    <groupId>org.scala-tools</groupId>
-    <artifactId>scala-tools-parent</artifactId>
-    <version>1.4</version>
-  </parent> -->
   <properties>
     <maven.version>3.0</maven.version>
-    <scala.version>2.9.1</scala.version>
+    <scala.version>2.9.2</scala.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-	<groupId>org.scala-tools</groupId>
+  <groupId>com.jsuereth</groupId>
   <artifactId>scala-mojo-support</artifactId>
   <packaging>jar</packaging>
   <version>0.4-SNAPSHOT</version>
@@ -66,9 +61,15 @@
       <version>${scala.version}</version>
     </dependency>
 		<dependency>
-			<groupId>com.github.jsuereth.scala-arm</groupId>
+			<groupId>com.jsuereth</groupId>
 			<artifactId>scala-arm_${scala.version}</artifactId>
-			<version>1.0</version>
+			<version>1.2</version>
+	  </dependency>
+		<dependency>
+			<groupId>javax.transaction</groupId>
+			<artifactId>jta</artifactId>
+			<version>1.0.1B</version>
+      <scope>provided</scope>
 	  </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -80,8 +81,8 @@
 
   <repositories>
     <repository>
-      <id>scala-tools.org</id>
-      <url>http://scala-tools.org/repo-releases</url>
+      <id>java.net repo</id>
+      <url>http://download.java.net/maven/2/</url>
     </repository>
   </repositories>
   <licenses>
