--- a/src/it/test-mojo-project/pom.xml
+++ b/src/it/test-mojo-project/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.scala-tools</groupId>
+	<groupId>com.jsuereth</groupId>
 	<artifactId>test-scala-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
 	<version>@project.version@</version>
@@ -19,7 +19,7 @@
 			<version>@maven.version@</version>
 		</dependency>
 		<dependency>
-			<groupId>org.scala-tools</groupId>
+			<groupId>com.jsuereth</groupId>
 			<artifactId>scala-mojo-support</artifactId>
 			<version>@project.version@</version>
 		</dependency>
@@ -49,7 +49,7 @@
 				<version>2.6</version>
         <dependencies>
 					<dependency>
-						<groupId>org.scala-tools</groupId>
+						<groupId>com.jsuereth</groupId>
 						<artifactId>scala-mojo-support</artifactId>
 						<version>@project.version@</version>
 					</dependency>
