--- a/src/it/test-mojo-project/src/it/testEcho/pom.xml
+++ b/src/it/test-mojo-project/src/it/testEcho/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.scala-tools</groupId>
+	<groupId>com.jsuereth</groupId>
 	<artifactId>testEcho</artifactId>
 	<packaging>pom</packaging>
 	<version>@project.version@</version>
@@ -10,7 +10,7 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.scala-tools</groupId>
+				<groupId>com.jsuereth</groupId>
 				<artifactId>test-scala-plugin</artifactId>
 				<version>@project.version@</version>
 			</plugin>
