--- a/pom.xml
+++ b/pom.xml
@@ -112,9 +112,9 @@
     </extensions>  
     <plugins>
       <plugin>
-        <groupId>org.scala-tools</groupId>
-        <artifactId>maven-scala-plugin</artifactId>
-        <version>2.15.3-SNAPSHOT</version>
+        <groupId>net.alchim31.maven</groupId>
+        <artifactId>scala-maven-plugin</artifactId>
+        <version>3.1.0</version>
         <executions>
           <execution>
             <id>compile</id>
@@ -141,6 +141,7 @@
             <!--<arg>-Xprint:typer</arg>-->
             <!--<arg>-explaintypes</arg>-->
           </args>
+          <recompileMode>incremental</recompileMode>
         </configuration>
       </plugin>
       <plugin>
