Convert to multimodule project for brainless crossbuilding.
This makes publishing simpler, at the expense of some DRYness.  A
better Maven maven might know a better way.

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,10 @@
   <packaging>pom</packaging>
   <version>0.5-SNAPSHOT</version>
   <name>Scala Mojo Support</name>
+  <modules>
+    <module>scala-mojo-support_2.9</module>
+    <module>scala-mojo-support_2.10.0-RC2</module>
+  </modules>
   <description>The scala-mojo-support project contains helper code for creating Mojos in scala.</description>
   <url>http://jsuereth.com/scala-mojo-support</url>
   <scm>
@@ -110,39 +114,6 @@
     </extensions>  
     <plugins>
       <plugin>
-        <groupId>net.alchim31.maven</groupId>
-        <artifactId>scala-maven-plugin</artifactId>
-        <version>3.1.0</version>
-        <executions>
-          <execution>
-            <id>compile</id>
-            <goals>
-              <goal>add-source</goal>
-              <goal>compile</goal>
-              <goal>testCompile</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>attach-javadocs</id>
-            <goals>
-              <goal>doc-jar</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <scalaVersion>${scala.version}</scalaVersion>
-          <args>
-            <arg>-target:jvm-${target.jvm}</arg>
-            <arg>-no-specialization</arg>
-            <arg>-deprecation</arg>
-            <!--<arg>-Ystop:erasure</arg>-->
-            <!--<arg>-Xprint:typer</arg>-->
-            <!--<arg>-explaintypes</arg>-->
-          </args>
-          <recompileMode>incremental</recompileMode>
-        </configuration>
-      </plugin>
-      <plugin>
         <artifactId>maven-invoker-plugin</artifactId>
         <version>1.5</version>
         <configuration>
@@ -221,6 +192,43 @@
         </executions>
       </plugin>
     </plugins>
+    <pluginManagement>
+      <plugins>
+	<plugin>
+          <groupId>net.alchim31.maven</groupId>
+          <artifactId>scala-maven-plugin</artifactId>
+          <version>3.1.0</version>
+          <executions>
+            <execution>
+              <id>compile</id>
+              <goals>
+		<goal>add-source</goal>
+		<goal>compile</goal>
+		<goal>testCompile</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>attach-javadocs</id>
+              <goals>
+		<goal>doc-jar</goal>
+              </goals>
+            </execution>
+          </executions>
+          <configuration>
+            <scalaVersion>${scala.version}</scalaVersion>
+            <args>
+              <arg>-target:jvm-${target.jvm}</arg>
+              <arg>-no-specialization</arg>
+              <arg>-deprecation</arg>
+              <!--<arg>-Ystop:erasure</arg>-->
+              <!--<arg>-Xprint:typer</arg>-->
+              <!--<arg>-explaintypes</arg>-->
+            </args>
+            <recompileMode>incremental</recompileMode>
+          </configuration>
+	</plugin>
+      </plugins>
+    </pluginManagement>
   </build>
   <distributionManagement>
       <repository>
