Fix travis build to do what it did before, but with correct flags.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: false
 language: java
 install:
-  - mvn dependency:list
+  - mvn install -Dgpg.skip=true
 script:
   - mvn integration-test test -Dgpg.skip=true
