--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
   <properties>
     <maven.version>3.2.3</maven.version>
-    <scala.version>2.11.6</scala.version>
+    <scala.version>2.12.9</scala.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <groupId>com.jsuereth</groupId>
-  <artifactId>scala-mojo-support_2.11</artifactId>
+  <artifactId>scala-mojo-support_2.12</artifactId>
   <packaging>jar</packaging>
   <version>0.5.1-SNAPSHOT</version>
   <name>Scala Mojo Support</name>
@@ -24,8 +24,8 @@
       <name>Josh Suereth</name>
       <email>joshua.suereth@gmail.com</email>
       <url>http://jsuereth.com</url>
-      <organization>Typesafe</organization>
-      <organizationUrl>http://typesafe.com</organizationUrl>
+      <organization>Lightbend</organization>
+      <organizationUrl>https://www.lightbend.com/</organizationUrl>
       <roles>
         <role>architect</role>
         <role>developer</role>
@@ -71,7 +71,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -93,7 +93,7 @@
   <licenses>
     <license>
       <name>BSD</name>
-      <url>http://www.opensource.org/licenses/bsd-license.html</url>
+      <url>https://www.opensource.org/licenses/bsd-license.html</url>
     </license>
   </licenses>
   <pluginRepositories>
@@ -114,7 +114,7 @@
       <plugin>
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
-        <version>3.2.0</version>
+        <version>4.1.1</version>
         <executions>
           <execution>
             <id>compile</id>
@@ -134,7 +134,7 @@
         <configuration>
           <scalaVersion>${scala.version}</scalaVersion>
           <args>
-            <arg>-target:jvm-1.6</arg>
+            <arg>-target:jvm-1.8</arg>
             <arg>-no-specialization</arg>
             <arg>-deprecation</arg>
             <!--<arg>-Ystop:erasure</arg>-->
